@@ -37,9 +37,7 @@ import org.bukkit.event.Listener;
 import org.bukkit.event.player.PlayerChangedWorldEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerKickEvent;
-import org.bukkit.event.player.PlayerPortalEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
-import org.bukkit.event.player.PlayerRespawnEvent;
 import org.bukkit.event.server.PluginDisableEvent;
 import org.bukkit.event.server.PluginEnableEvent;
 import org.bukkit.permissions.Permission;
@@ -345,6 +343,12 @@ public class BukkitPermissions {
 			this.updatePermissions(player, null);
 	}
 
+	/**
+	 * Player events tracked to cause Superperms updates
+	 * 
+	 * @author Steve
+	 *
+	 */
 	protected class PlayerEvents implements Listener {
 
 		@EventHandler(priority = EventPriority.LOWEST)
@@ -362,18 +366,6 @@ public class BukkitPermissions {
 		@EventHandler(priority = EventPriority.LOWEST)
 		public void onPlayerChangeWorld(PlayerChangedWorldEvent event) { // has changed worlds
 			updatePermissions(event.getPlayer(), event.getPlayer().getWorld().getName());
-		}
-
-		@EventHandler(priority = EventPriority.LOWEST)
-		public void onPlayerPortal(PlayerPortalEvent event) { // will portal into another world
-			if ((event.getTo() != null) && (!event.getFrom().getWorld().equals(event.getTo().getWorld()))) { // only if world actually changed
-				updatePermissions(event.getPlayer(), event.getTo().getWorld().getName());
-			}
-		}
-
-		@EventHandler(priority = EventPriority.LOWEST)
-		public void onPlayerRespawn(PlayerRespawnEvent event) { // can be respawned in another world
-			updatePermissions(event.getPlayer(), event.getRespawnLocation().getWorld().getName());
 		}
 
 		@EventHandler(priority = EventPriority.LOWEST)
